--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_reconnect">Reconnect</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_services">Services</string>
@@ -20,4 +19,8 @@
     <string name="action_scan_off">Stop scan</string>
     <string name="unknown_service">Unknown service</string>
     <string name="unknown_characteristic">Unknown characteristic</string>
+    <string name="notification_title">BleComm</string>
+    <string name="notification_message">BT communication</string>
+    <string name="action_start_service">Start service</string>
+    <string name="action_stop_service">Stop service</string>
 </resources>
